[package]
name = "passmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
tokio = {version = "1", features = ["full"]}
rusqlite = {version = "0.31", features = ["bundled"]}
rmcp = {version = "0.1", features = ["server"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"